--- a/game.project
+++ b/game.project
@@ -3,7 +3,7 @@ title = Marine Treasure Hunter
 version = 0.1
 
 [bootstrap]
-main_collection = /main/main.collectionc
+main_collection = /main/loader.collectionc
 
 [input]
 game_binding = /input/game.input_bindingc
